--- a/quant-service/src/main/resources/static/www.html
+++ b/quant-service/src/main/resources/static/www.html
@@ -4178,7 +4178,7 @@
             }
         ,
             columns: [{
-                "field": "scode",
+                "field": "code",
                 "title": "股票代码",
                 "key": "scode"
             },
