--- a/quant-admin/src/main/resources/static/index.html
+++ b/quant-admin/src/main/resources/static/index.html
@@ -1,240 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>quant</title>
-	</head>
-	<body>
-		<div class="head-nav">
-			<div class="head-nav-con clearFloat">
-				<ul>
-					<li><a href="pages/fund.html" target="my_iframe">基金</a></li>
-					<li><a href="pages/stock.html" target="my_iframe">股票</a></li>
-					<li><a href="http://data.eastmoney.com/zjlx/detail.html" target="_blank">资金流</a></li>
-					<li class="drop-down"><a href="http://data.eastmoney.com/hsgtcg/" target="_blank">北向资金</a>
-						<ul class="drop-down-content">
-							<li><a href="#" target="my_iframe">个股</a></li>
-							<li><a href="#" target="my_iframe">板块</a></li>
-						</ul>
-					</li>
-					<li><a href="http://data.eastmoney.com/report/stock.jshtml" target="_blank">个股研报</a></li>
-				</ul>
-			</div>
-		</div>
-		<div id="app" style="position:relative; overflow:hidden; padding-top:46%; font-size: 12px;">
-			<iframe name="my_iframe" scrolling="no" style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
-		</div>
-	</body> 
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-	
-		body,
-		html {
-			font-size: 14px;
-			font-family: 'Microsoft Yahei', '微软雅黑', 'Simsun', '宋体', 'Arial', sans-serif;
-		}
-	
-		img {
-			border: 0;
-		}
-	
-		a {
-			color: #fff;
-			text-decoration: none;
-			outline: none;
-		}
-	
-		ol,
-		ul,
-		li {
-			list-style: none;
-		}
-	
-		.head-nav {
-			width: 100%;
-			height: 50px;
-			background: #ff9c01;
-		}
-	
-		.head-nav-con {
-			width: 100%;
-			height: 50px;
-			margin: auto;
-		}
-	
-		.head-nav-con ul li {
-			width: 170px;
-			float: left;
-			font-size: 20px;
-			text-align: center;
-		}
-	
-		.head-nav-con ul li:hover {
-			background: #f60;
-		}
-	
-		.head-nav-con ul a {
-			display: block;
-			text-decoration: none;
-			text-align: center;
-			line-height: 50px;
-			color: white;
-		}
-	
-		.head-nav-con .drop-down {
-			position: relative;
-		}
-	
-		.head-nav-con .drop-down-content {
-			padding: 0;
-			display: none;
-			position: absolute;
-			z-index: 1;
-			background: #ff9c01;
-		}
-	
-		.head-nav-con .drop-down-content li:hover>a {
-			background-color: #f60;
-		}
-	
-		.head-nav-con .drop-down:hover .drop-down-content {
-			display: block;
-		}
-	
-		.head-nav-con .drop-down-2 {
-			position: relative;
-		}
-	
-		.head-nav-con .drop-down-content-2 {
-			padding: 0;
-			display: none;
-			position: absolute;
-			z-index: 1;
-			background-color: #f60;
-			right: -170px;
-			top: 0;
-		}
-	
-		.head-nav-con .drop-down-content-2>li {
-			float: none;
-			background-color: #ff9c01;
-		}
-	
-		.head-nav-con .drop-down-content-2 li:hover a {
-			background-color: #f60;
-		}
-	
-		.head-nav-con .drop-down-2:hover .drop-down-content-2 {
-			display: block;
-		}
-	</style> 
+<head>
+    <meta charset="UTF-8"/>
+    <title>DeepThink Quant</title>
+    <script src="../js/vue.min.js"></script>
+</head>
+<body>
+<div class="head-nav">
+    <div class="head-nav-con clearFloat">
+        <ul>
+            <li><a href="pages/board.html" target="my_iframe">热点概念</a></li>
+            <li><a href="pages/dragon.html" target="my_iframe">资金流向</a></li>
+            <li><a href="pages/stock.html" target="my_iframe">股票行情</a></li>
+            <li><a href="http://data.eastmoney.com/zjlx/detail.html" target="_blank">资金分析</a></li>
+            <li class="drop-down"><a href="http://data.eastmoney.com/hsgtcg/" target="_blank">北向资金</a>
+                <ul class="drop-down-content">
+                    <li><a href="#" target="my_iframe">个股</a></li>
+                    <li><a href="#" target="my_iframe">板块</a></li>
+                </ul>
+            </li>
+            <li><a href="http://data.eastmoney.com/report" target="_blank">个股研报</a></li>
+        </ul>
+    </div>
+</div>
+<div id="app" style="position:absolute; top: 50px; width: 100%; height: 100%">
+    <iframe name="my_iframe"  style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;" src="pages/board.html"></iframe>
+</div>
+</body>
+<script>
+    var vm = new Vue({
+        el: "#app",
+        mounted() {
+        },
+
+        methods: {
+            setIframeHeight(event) {
+                const iframe = event.target
+                try {
+                    // 方法1：通过 contentWindow 获取内容高度
+                    const height = iframe.contentWindow.document.documentElement.scrollHeight
+                    iframe.style.height = height + 'px'
+                    // 方法2：确保没有滚动条
+                    iframe.style.overflow = 'hidden'
+                    console.log('iframe 高度设置为:', height)
+                } catch (e) {
+                    console.warn('无法设置iframe高度（跨域限制）', e)
+                }
+            }
+        }
+    });
+
+</script>
 <style>
-			* {
-				margin: 0;
-				padding: 0;
-			}
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
-			body,
-			html {
-				font-size: 14px;
-				font-family: 'Microsoft Yahei', '微软雅黑', 'Simsun', '宋体', 'Arial', sans-serif;
-			}
+    body,
+    html {
+        overflow: hidden !important;
+        height: 100vh !important;
+        position: fixed !important;
+        width: 100% !important;
+        font-size: 14px;
+        font-family: 'Microsoft Yahei', '微软雅黑', 'Simsun', '宋体', 'Arial', sans-serif;
+    }
 
-			img {
-				border: 0;
-			}
+    img {
+        border: 0;
+    }
 
-			a {
-				color: #fff;
-				text-decoration: none;
-				outline: none;
-			}
+    a {
+        color: #fff;
+        text-decoration: none;
+        outline: none;
+    }
 
-			ol,
-			ul,
-			li {
-				list-style: none;
-			}
+    ol,
+    ul,
+    li {
+        list-style: none;
+    }
 
-			.head-nav {
-				width: 100%;
-				height: 50px;
-				background: #ff9c01;
-			}
+    .head-nav {
+        width: 100%;
+        height: 50px;
+        background: #ff9c01;
+    }
 
-			.head-nav-con {
-				width: 100%;
-				height: 50px;
-				margin: auto;
-			}
+    .head-nav-con {
+        width: 100%;
+        height: 50px;
+        margin: auto;
+    }
 
-			.head-nav-con ul li {
-				width: 170px;
-				float: left;
-				font-size: 20px;
-				text-align: center;
-			}
+    .head-nav-con ul li {
+        width: 170px;
+        float: left;
+        font-size: 20px;
+        text-align: center;
+    }
 
-			.head-nav-con ul li:hover {
-				background: #f60;
-			}
+    .head-nav-con ul li:hover {
+        background: #f60;
+    }
 
-			.head-nav-con ul a {
-				display: block;
-				text-decoration: none;
-				text-align: center;
-				line-height: 50px;
-				color: white;
-			}
+    .head-nav-con ul a {
+        display: block;
+        text-decoration: none;
+        text-align: center;
+        line-height: 50px;
+        color: white;
+    }
 
-			.head-nav-con .drop-down {
-				position: relative;
-			}
+    .head-nav-con .drop-down {
+        position: relative;
+    }
 
-			.head-nav-con .drop-down-content {
-				padding: 0;
-				display: none;
-				position: absolute;
-				z-index: 1;
-				background: #ff9c01;
-			}
+    .head-nav-con .drop-down-content {
+        padding: 0;
+        display: none;
+        position: absolute;
+        z-index: 1;
+        background: #ff9c01;
+    }
 
-			.head-nav-con .drop-down-content li:hover>a {
-				background-color: #f60;
-			}
+    .head-nav-con .drop-down-content li:hover > a {
+        background-color: #f60;
+    }
 
-			.head-nav-con .drop-down:hover .drop-down-content {
-				display: block;
-			}
+    .head-nav-con .drop-down:hover .drop-down-content {
+        display: block;
+    }
 
-			.head-nav-con .drop-down-2 {
-				position: relative;
-			}
+    .head-nav-con .drop-down-2 {
+        position: relative;
+    }
 
-			.head-nav-con .drop-down-content-2 {
-				padding: 0;
-				display: none;
-				position: absolute;
-				z-index: 1;
-				background-color: #f60;
-				right: -170px;
-				top: 0;
-			}
+    .head-nav-con .drop-down-content-2 {
+        padding: 0;
+        display: none;
+        position: absolute;
+        z-index: 1;
+        background-color: #f60;
+        right: -170px;
+        top: 0;
+    }
 
-			.head-nav-con .drop-down-content-2>li {
-				float: none;
-				background-color: #ff9c01;
-			}
+    .head-nav-con .drop-down-content-2 > li {
+        float: none;
+        background-color: #ff9c01;
+    }
 
-			.head-nav-con .drop-down-content-2 li:hover a {
-				background-color: #f60;
-			}
+    .head-nav-con .drop-down-content-2 li:hover a {
+        background-color: #f60;
+    }
 
-			.head-nav-con .drop-down-2:hover .drop-down-content-2 {
-				display: block;
-			}
-		</style> 
+    .head-nav-con .drop-down-2:hover .drop-down-content-2 {
+        display: block;
+    }
+</style>
 </html>
