--- a/quant-admin/src/main/resources/static/index.html
+++ b/quant-admin/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
             <li><a href="pages/board.html" target="my_iframe">热点概念</a></li>
             <li><a href="pages/dragon.html" target="my_iframe">资金流向</a></li>
             <li><a href="pages/stock.html" target="my_iframe">股票行情</a></li>
+            <li><a href="pages/fund.html" target="my_iframe">基金行情</a></li>
             <li><a href="http://data.eastmoney.com/zjlx/detail.html" target="_blank">资金分析</a></li>
             <li class="drop-down"><a href="http://data.eastmoney.com/hsgtcg/" target="_blank">北向资金</a>
                 <ul class="drop-down-content">
