--- a/quant-admin/src/main/resources/static/pages/board.html
+++ b/quant-admin/src/main/resources/static/pages/board.html
@@ -3,82 +3,34 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="../css/theme-default-easytable.css"/>
+    <link rel="stylesheet" href="../css/my.css"/>
     <script src="../js/config.js"></script>
     <script src="../js/Sortable.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/axios.min.js"></script>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        td {
-            border: 0px solid #ddd;
-            padding: 5px;
-        }
-
-        .td-flex {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-        }
-
-        .float-left {
-            float: left;
-        }
-
-        .float-right {
-            float: right;
-        }
-
-        .left {
-            text-align: left;
-        }
-
-        .right {
-            text-align: right;
-        }
-    </style>
 </head>
 <body>
 <div id="app" style="font-size: 12px;">
     <div class="ve-table">
-        <div class="ve-table-container ve-table-border-around" id="vDiv" style="max-height: 864px; ">
-            <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable" style="width: 2000px;">
+        <div class="ve-table-container ve-table-border-around" id="vDiv" style="max-height: 900px; ">
+            <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable">
                 <thead class="ve-table-fixed-header ve-table-header">
                 <tr class="ve-table-header-tr">
-                    <th class="ve-table-header-th" style="width: 250px; font-size: medium" v-for="col in tableData[0]">{{col.tradeDate}}</th>
+                    <th class="ve-table-header-th" style="width: 140px;" v-for="col in tableData[0]">{{col.tradeDate}}</th>
                 </tr>
                 </thead>
                 <tbody id="sort" class="ve-table-body ve-table-stripe ve-table-row-hover ve-table-row-highlight">
                 <tr style="height: 0px;"></tr>
-                <tr class="ve-table-body-tr" v-for="(col,index) in tableData" v-if="index > 0">
-                    <td class="ve-table-body-td" style="text-align: left;padding: 5px; " v-for="c in col" :class="c.code" @mouseenter="isHover(c.code)" @mouseleave="isLeave(c.code)">
+                <tr class="ve-table-body-tr" style="width: 70px" v-for="(col,index) in tableData" v-if="index > 0">
+                    <td class="ve-table-body-td" v-for="c in col" :class="c.code" @mouseenter="isHover(c.code)" @mouseleave="isLeave(c.code)">
                         <a :href="'https://quote.eastmoney.com/bk/'+c.market+'.'+c.code+'.html'" target="_blank" style="color: #494949">
-                            <div class="td-flex">
-                                <span class="left" style="font-size: 22px;">{{c.name}}</span>
-                                <span class="right" :style="c.changeRate.startsWith('-') ? 'color: green' : 'color: red'"><span style="font-size: medium">{{c.changeRate}}</span></span>
+                            <div class="td-flex center">
+                                <span class="center" style="width: 100%;" :style="c.name.length > 6 ? 'font-size: 17px;' : 'font-size: 20px;'">{{c.name}}</span>
                             </div>
                             <div class="td-flex">
-                                <span class="left" style="width: 39%">总: {{c.marketCap}}</span>
-                                <span class="left" style="width: 39%">成: {{c.accumAmount}}</span>
-                                <div class="right">
-                                    <span style="color: red">{{c.upNum}}</span> | <span style="color: green;">{{c.downNum}}</span>
-                                </div>
-                            </div>
-                            <div class="td-flex">
-                                <span class="left">主力</span>
-                                <span class="right" style="width: 27%; color: red">{{c.mainIn}}</span>
-                                <span class="right" style="width: 27%; color: green">-{{c.mainOut}}</span>
-                                <span class="right" style="width: 27%"><span :style="c.mainNetIn.startsWith('-') ? 'color: green' : 'color: red'">{{c.mainNetIn}}</span></span>
-                            </div>
-                            <div class="td-flex">
-                                <span class="left">散户</span>
-                                <span class="right" style="width: 27%; color: red">{{c.retailIn}}</span>
-                                <span class="right" style="width: 27%; color: green">-{{c.retailOut}}</span>
-                                <span class="right" style="width: 27%"><span :style="c.retailNetIn.startsWith('-') ? 'color: green' : 'color: red'">{{c.retailNetIn}}</span></span>
+                                <span class="right" style="width: 50%; font-size: 15px;" :style="c.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{c.changeRate}}</span>
+                                <!--<div class="center" ><span style="color: red">{{c.upNum}}</span> | <span style="color: green;">{{c.downNum}}</span></div>-->
+                                <span class="center" style="width: 50%" :style="c.mainNetIn.startsWith('-') ? 'color: green' : 'color: red'">{{c.mainNetIn}}</span>
                             </div>
                         </a>
                     </td>
@@ -96,11 +48,10 @@
 <script>
     var fcode = "all";
     var h = location.href;
+    console.log(fcode);
     if (h.indexOf("?") > 0) {
         fcode = h.substr(h.indexOf("?") + 1);
         console.log(fcode);
-        document.getElementById('vDiv').style.maxHeight = '680px';
-        document.getElementById('vTable').style.maxHeight = '655px';
     }
     var fade = document.getElementById('fade');
     var MyDiv = document.getElementById('MyDiv');
@@ -133,19 +84,16 @@
                 this.tableData = json.data;
                 // console.log(JSON.stringify(this.tableData))
             },
-
             isHover: function (code) {
                 document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
                     el.style.backgroundColor = 'yellow';
                 });
             },
-
             isLeave: function (code) {
                 document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
                     el.style.backgroundColor = ''; // 或者设置回默认颜色或其他颜色
                 });
             },
-
             //弹出隐藏层
             getJsonValue: function (json) {
                 console.log(json)
@@ -183,8 +131,6 @@
         },
         data: function () {
             return {
-                days: 10,
-                tops: 10,
                 isDragging: true,
                 hs_lb_title: '换手率=（某一段时期内的成交量）/（流通股）x 100% ，反映股票流通性强弱的指标之一\n' +
                     '将换手率与股价走势相结合，可以股价做出一定的预测和判断。某只股票的换手率突然上升，成交量放大，可能意味着有投资者在大量买进，\n' +
