--- a/quant-admin/src/main/resources/static/pages/dragon.html
+++ b/quant-admin/src/main/resources/static/pages/dragon.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="../css/theme-default-easytable.css"/>
+    <link rel="stylesheet" href="../css/my.css"/>
     <script src="../js/config.js"></script>
     <script src="../js/Sortable.js"></script>
     <script src="../js/vue.min.js"></script>
@@ -11,39 +12,109 @@
 <body>
 <div id="app" style="font-size: 12px;">
     <div class="ve-table">
-        <div class="ve-table-container ve-table-border-around" id="vDiv" style="max-height: 864px; ">
-            <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable" style="width: 2000px;">
+        <div class="ve-table-container ve-table-border-around" id="vDiv" style="max-height: 900px; ">
+            <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable">
                 <thead class="ve-table-fixed-header ve-table-header">
                 <tr class="ve-table-header-tr">
-                    <th class="ve-table-header-th ve-table-fixed-left" style="width: 90px; left: 15px;">游资</th>
-                    <th class="ve-table-header-th" style="width: 90px;">营业部</th>
-                    <th class="ve-table-header-th" style="width: 100px;">个股</th>
-                    <th class="ve-table-header-th" style="width: 100px;">收盘价</th>
-                    <th class="ve-table-header-th" style="width: 100px;">涨幅</th>
-                    <th class="ve-table-header-th" style="width: 100px;">净买入/占比</th>
-                    <th class="ve-table-header-th" style="width: 100px;">买入/占比</th>
-                    <th class="ve-table-header-th" style="width: 100px;">卖出/占比</th>
-                    <th class="ve-table-header-th" style="width: 100px;">市场总成交额</th>
-                    <th class="ve-table-header-th" style="width: 100px;">上榜原因</th>
+                    <th class="ve-table-header-th" style="width: 100px;">游资</th>
+                    <th class="ve-table-header-th" style="width: 140px;">个股</th>
+                    <th class="ve-table-header-th" style="width: 190px;">行情</th>
+                    <th class="ve-table-header-th" style="width: 220px;">资金流向</th>
+                    <th class="ve-table-header-th" style="width: 160px;">龙虎榜</th>
+                    <th class="ve-table-header-th" style="width: 160px;">游资买入</th>
+                    <th class="ve-table-header-th" style="width: 300px;">营业部</th>
+                    <th class="ve-table-header-th" style="width: 300px;">上榜原因</th>
                 </tr>
                 </thead>
                 <tbody id="sort" class="ve-table-body ve-table-stripe ve-table-row-hover ve-table-row-highlight">
                 <tr style="height: 0px;"></tr>
-                <tr class="ve-table-body-tr" v-for="col in tableData">
-                    <td class="ve-table-body-td" style="text-align: center;">{{col.partnerName}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 20px;">{{col.deptName}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 20px;">{{col.name}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 20px;">{{col.closePrice}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">
-                        <span :style="col.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{col.changeRate}}</span>
+                <tr class="ve-table-body-tr" style="width: 70px" v-for="col in tableData">
+                    <td class="ve-table-body-td" style="text-align: center;font-size: medium">{{col.partnerName}}</td>
+                    <td class="ve-table-body-td" :class="col.code" @mouseenter="isHover(col.code)" @mouseleave="isLeave(col.code)">
+                        <a :href="'https://data.eastmoney.com/stockdata/'+col.code+'.html'" target="_blank" style="color: #494949">
+                            <div class="td-flex">
+                                <span class="center" style="width: 65%; font-size: 20px; ">{{col.name}}</span>
+                                <span class="center" style="width: 35%">{{col.freeMarketCap}}</span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="center" style="width: 50%; font-size: 15px;" :style="col.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{col.closePrice}}</span>
+                                <span class="center" style="width: 50%; font-size: 15px;" :style="col.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{col.changeRate}}</span>
+                            </div>
+                        </a>
                     </td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">
-                        <span :style="col.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{col.netBuyAmount}}</span>
+                    <td class="ve-table-body-td">
+                        <div class="td-flex">
+                            <span class="left" style="width: 45%">换手: {{col.turnoverRate}}</span>
+                            <span class="left" style="width: 55%">成交额: {{col.accumAmount}}</span>
+                        </div>
+                        <div class="td-flex">
+                            <span class="left" style="width: 45%">量比: {{col.volumeRatio}}</span>
+                            <span class="left" style="width: 55%">成交量: {{col.volume}}</span>
+                        </div>
+                        <div class="td-flex">
+                            <span class="left" style="width: 45%">市净: {{col.pb}}</span>
+                            <span class="left" style="width: 55%">市盈(动): {{col.pef}}</span>
+                        </div>
                     </td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">{{col.buyAmount}}{{col.totalBuyRatio}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">{{col.sellAmount}}{{col.totalSellRatio}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">{{col.accumAmount}}</td>
-                    <td class="ve-table-body-td" style="text-align: right;padding-right: 10px;">{{col.explanation}}</td>
+                    <td class="ve-table-body-td">
+                        <a :href="'https://data.eastmoney.com/zjlx/'+col.code+'.html'" target="_blank" style="color: #494949">
+                            <div class="td-flex">
+                                <span class="left" style="width: 50%">主力流入: <span style="color: red">{{col.mainIn}}</span></span>
+                                <span class="left" style="width: 50%">散户流入: <span style="color: red">{{col.retailIn}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 50%">主力流出: <span style="color: green">{{col.mainOut}}</span></span>
+                                <span class="left" style="width: 50%">散户流出: <span style="color: green">{{col.retailOut}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 50%">主力净额: <span :style="col.mainNetIn.startsWith('-') ? 'color: green' : 'color: red'">{{col.mainNetIn}}</span></span>
+                                <span class="left" style="width: 50%">散户净额: <span :style="col.retailNetIn.startsWith('-') ? 'color: green' : 'color: red'">{{col.retailNetIn}}</span></span>
+                            </div>
+                        </a>
+                    </td>
+                    <td class="ve-table-body-td">
+                        <a href="https://data.eastmoney.com/stock/tradedetail.html" target="_blank" style="color: #494949">
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">买入: <span style="color: red">{{col.buyAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span style="color: red">{{col.buyAmountRatio}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">卖出: <span style="color: green">{{col.sellAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span style="color: green">{{col.sellAmountRatio}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">净额: <span :style="col.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{col.netBuyAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span :style="col.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{col.netBuyAmountRatio}}</span></span>
+                            </div>
+                            <!-- <div class="td-flex">
+                                 <span class="left" style="width: 60%">成交额: {{col.dealAmount}}</span>
+                                 <span class="left" style="width: 40%">{{col.dealAmountRatio}}</span>
+                             </div>-->
+                        </a>
+                    </td>
+                    <td class="ve-table-body-td">
+                        <a :href="'https://data.eastmoney.com/stock/lhb,'+col.tradeDate+','+col.code+'.html'" target="_blank" style="color: #494949">
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">买入: <span style="color: red">{{col.deptBuyAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span style="color: red">{{col.deptTotalBuyRatio}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">卖出: <span style="color: green">{{col.deptSellAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span style="color: green">{{col.deptTotalSellRatio}}</span></span>
+                            </div>
+                            <div class="td-flex">
+                                <span class="left" style="width: 60%">净额: <span :style="col.deptNetBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{col.deptNetBuyAmount}}</span></span>
+                                <span class="left" style="width: 40%"><span :style="col.deptNetBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{col.deptTotalNetBuyRatio}}</span></span>
+                            </div>
+                        </a>
+                    </td>
+                    <td class="ve-table-body-td">
+                        <a :href="'https://data.eastmoney.com/stock/lhb/yybtj/'+col.deptCode+'.html'" target="_blank">
+                            <div class="td-flex">{{col.deptName}}</div>
+                        </a>
+                        <div class="td-flex">{{col.explains}}</div>
+                    </td>
+                    <td class="ve-table-body-td">{{col.explanation}}</td>
                 </tr>
                 </tbody>
             </table>
@@ -58,11 +129,9 @@
 <script>
     var fcode = "all";
     var h = location.href;
+    console.log(h);
     if (h.indexOf("?") > 0) {
         fcode = h.substr(h.indexOf("?") + 1);
-        console.log(fcode);
-        document.getElementById('vDiv').style.maxHeight = '680px';
-        document.getElementById('vTable').style.maxHeight = '655px';
     }
     var fade = document.getElementById('fade');
     var MyDiv = document.getElementById('MyDiv');
@@ -74,7 +143,7 @@
 
     // 异步请求函数必须要写在外面，然后在vue里面调用
     function asyncLoadDate() {
-        axios.get(url + 'dragon/list')
+        axios.get(url + 'dragon/list/2026-02-11')
             .then(function (response) {
                 if (response.status === 200) {
                     vm.fillData(response);
@@ -94,6 +163,16 @@
                 let json = response.data;
                 this.tableData = json.data;
                 // console.log(JSON.stringify(this.tableData))
+            },
+            isHover: function (code) {
+                document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
+                    el.style.backgroundColor = 'yellow';
+                });
+            },
+            isLeave: function (code) {
+                document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
+                    el.style.backgroundColor = ''; // 或者设置回默认颜色或其他颜色
+                });
             },
             //弹出隐藏层
             getJsonValue: function (json) {
