--- a/quant-admin/src/main/resources/static/index.html
+++ b/quant-admin/src/main/resources/static/index.html
@@ -65,7 +65,8 @@
         position: fixed !important;
         width: 100% !important;
         font-size: 14px;
-        font-family: 'Microsoft Yahei', '微软雅黑', 'Simsun', '宋体', 'Arial', sans-serif;
+        /*font-family: 'Microsoft Yahei', '微软雅黑', 'Simsun', '宋体', 'Arial', sans-serif;*/
+        font-family: 'microsoft yahei', 'Hiragino Sans GB', 'Pingfang SC', sans-serif;
     }
 
     img {
