--- a/quant-admin/src/main/resources/static/pages/board.html
+++ b/quant-admin/src/main/resources/static/pages/board.html
@@ -109,9 +109,7 @@
                 MyDiv.style.height = '680px';
                 MyDiv.style.display = 'block';
                 fade.style.display = 'block';
-                MyDiv.innerHTML = '<object type="text/html" data="fundDetail.html?' + code +
-                    '" width="100%" height="99%"></object>';
-
+                MyDiv.innerHTML = '<object type="text/html" data="fundDetail.html?' + code +'" width="100%" height="99%"></object>';
             },
             showReportStock: function (code) {
                 if (fcode == "all") {
