--- a/quant-admin/src/main/resources/static/pages/partner.html
+++ b/quant-admin/src/main/resources/static/pages/partner.html
@@ -9,7 +9,7 @@
     <script src="../js/axios.min.js"></script>
 </head>
 <body style="overflow-y:hidden;">
-<div id="app" style="font-size: 12px;">
+<div id="partner" style="font-size: 12px;">
     <div style="white-space: nowrap;">
         <div style="padding-left: 18px;font-size: small;">
             1. 多知名游资协同买入--强题材信号。数据验证：有68%的个股在启动阶段，存在2家以上知名游资协同买入的情况，题材达成共识，后续上涨概率极高；
@@ -28,8 +28,10 @@
                 <thead class="ve-table-fixed-header ve-table-header">
                 <tr class="ve-table-header-tr">
                     <th class="ve-table-header-th" style="width: 30px;">序号</th>
-                    <th class="ve-table-header-th" style="width: 220px;">游资</th>
-                    <th class="ve-table-header-th" style="width: 360px;">席位</th>
+                    <th class="ve-table-header-th" style="width: 140px;">游资</th>
+                    <th class="ve-table-header-th" style="width: 40px;">一年上榜</th>
+                    <th class="ve-table-header-th" style="width: 250px;">风格</th>
+                    <th class="ve-table-header-th" style="width: 250px;">席位</th>
                 </tr>
                 </thead>
                 <tbody class="ve-table-body ve-table-stripe ve-table-row-hover ve-table-row-highlight">
@@ -37,19 +39,34 @@
                     <td class="ve-table-body-td" style="text-align: center;">{{index+1}}</td>
                     <td class="ve-table-body-td">
                         <div class="td-flex">
-                            <span class="center" style="font-size: 15px">{{col.name}}</span>
-                            <span style="font-size: 12px; color: #494949">{{col.level}} {{col.fundSize}}</span>
-                            <div @click="showPartnerDept(col.code, col.name)">+</div>
-
+                            <span class="center" style="font-size: 20px; width: 100%">{{col.name}}
+                            </span>
                         </div>
                         <div class="td-flex">
-                            <span class="left">{{col.style}}</span>
+                            <span class="center" style="font-size: 12px; color: #494949; width: 100%">{{col.level}} {{col.fundSize}}</span>
+                        </div>
+                    </td>
+                    <td class="ve-table-body-td">
+                        <div class="td-flex" v-if="col.boardCount > 0">
+                            <span class="center" style=" width: 100%">{{col.boardCount}}次</span>
+                        </div>
+                        <div class="td-flex" v-if="col.boardCount > 0">
+                            <span class="center" style=" width: 100%">{{col.tradeAmount}}亿</span>
                         </div>
                     </td>
                     <td class="ve-table-body-td">
                         <div class="td-flex">
-                            <span class="left">{{col.deptName}}</span>
-                            <a href="#" class="em-totop" @click="deleteDept(col.code, col.deptCode)"><b class="em-icon em-ftop em-pro-toTop"></b></a>
+                            <span class="left" style=" width: 100%">{{col.style}}</span>
+                        </div>
+                    </td>
+                    <td class="ve-table-body-td">
+                        <div class="td-flex">
+                            <a href="#" class="em-totop" style="font-size: 10px;" @click="showPartnerDept(col.code, col.name)"> 新增</a>
+                        </div>
+                        <div class="td-flex" v-for="(c, index) in col.deptArray">
+                            <span class="left">{{c.deptName}}
+                                <a v-if="c.deptName != null" href="#" class="em-totop" style="font-size: 10px;" @click="deleteDept(col.code, c.deptCode)"> 删除</a>
+                            </span>
                         </div>
                     </td>
                 </tr>
@@ -86,7 +103,7 @@
     }
 
     var vm = new Vue({
-        el: "#app",
+        el: "#partner",
         mounted: function () {
             asyncLoadDate();
         },
@@ -94,11 +111,13 @@
             fillData: function (response) {
                 let json = response.data;
                 this.tableData = json.data;
+                // console.log(this.tableData);
             },
             showPartnerDept: function (code, name) {
                 MyDiv.style.width = '600px';
                 MyDiv.style.height = '400px';
                 MyDiv.style.display = 'block';
+                fade.style.display = 'block';
                 MyDiv.innerHTML = '<object type="text/html" data="addDept.html?code=' + code + '&name=' + name + '" width="100%" height="99%"></object>';
             },
             deleteDept: function (code, deptCode) {
@@ -106,7 +125,7 @@
                     axios.delete(url + 'org/partner/dept/' + code + "/" + deptCode).then(function (response) {
                         if (response.status === 200) {
                             alert('操作成功', function () {
-                                asyncLoadDate()
+                                this.reload();
                             });
                         }
                     }).catch(function (error) {
