--- a/quant-admin/src/main/resources/static/index.html
+++ b/quant-admin/src/main/resources/static/index.html
@@ -9,8 +9,9 @@
 <div class="head-nav">
     <div class="head-nav-con clearFloat">
         <ul>
-            <li><a href="pages/board.html" target="my_iframe">热点概念</a></li>
-            <li><a href="pages/dragon.html" target="my_iframe">资金流向</a></li>
+            <li><a href="pages/board.html" target="my_iframe">概念排名</a></li>
+            <li><a href="pages/dragonPartner.html" target="my_iframe">游资榜</a></li>
+            <li><a href="pages/dragonDept.html" target="my_iframe">个股榜</a></li>
             <li><a href="pages/stock.html" target="my_iframe">股票行情</a></li>
             <li><a href="pages/fund.html" target="my_iframe">基金行情</a></li>
             <li><a href="http://data.eastmoney.com/zjlx/detail.html" target="_blank">资金分析</a></li>
