--- a/quant-admin/src/main/resources/static/pages/dragonPartner.html
+++ b/quant-admin/src/main/resources/static/pages/dragonPartner.html
@@ -16,23 +16,84 @@
             <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable">
                 <thead class="ve-table-fixed-header ve-table-header">
                 <tr class="ve-table-header-tr">
-                    <th class="ve-table-header-th" style="width: 160px;" v-for="col in tableData[0]">
+                    <th class="ve-table-header-th" style="width: 158px;" v-for="(col, index) in tableData[0]" v-if="index < sellIndex" @click="showPartnerDetail(col.partnerCode)">
                         <div class="td-flex">
-                            <span class="center" style="width: 100%;">{{col.partnerName}}</span>
+                            <span class="center" style="width: 100%; font-size: 16px;">{{col.partnerName}}</span>
                         </div>
                         <div class="td-flex">
-                            <span class="center" style="width: 100%;">{{col.netBuyAmount}}</span>
+                            <span class="center" style="width: 100%; font-size: 12px; color: red;">{{col.netBuyAmount}}  {{col.totalNetBuyRatio}} </span>
                         </div>
                     </th>
                 </tr>
                 </thead>
                 <tbody id="sort" class="ve-table-body ve-table-stripe ve-table-row-hover ve-table-row-highlight">
                 <tr>
-                    <td class="ve-table-body-td" style="vertical-align: top;" v-for="(col, index) in tableData" v-if="index > 0">
-                        <ul style="width: 100%;display: block;border-bottom: 5px solid #fff;padding-bottom: 2px;" v-for="c in col" :class="'s'+c.code" @mouseenter="isHover('s'+c.code)" @mouseleave="isLeave('s'+c.code)">
+                    <td style="vertical-align: top;padding: 3px !important;" v-for="(col, index) in tableData" v-if="index > 0 && index <= sellIndex">
+                        <ul style="width: 100%; margin-bottom: 4px; padding: 2px; border: 0.4px solid #fef6f5;"
+                            v-for="c in col" :class="'s'+c.code" @mouseenter="isHover('s'+c.code)" @mouseleave="isLeave('s'+c.code)">
+                            <!--                            :style="c.changeRate.startsWith('-') ? 'background: linear-gradient(#edf9f0, #fff);' : 'background: linear-gradient(#fef6f5, #fff);'"-->
                             <li>
-                                <span class="left" style="width: 70%; font-size: 15px;">{{c.name}}</span>
-                                <span class="right" style="width: 30%;" :style="c.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{c.changeRate}}</span>
+                                <div class="td-flex" style="justify-content: left;" @click="showStockDetail(c.code)">
+                                    <span class="right" style="width: 50%; font-size: 16px;">{{c.name}}</span>
+                                    <span class="right" style="width: 40%;" :style="c.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{c.changeRate}}</span>
+                                </div>
+                                <div class="td-flex" style="font-size: 11px;" v-for="(p, index) in c.partners"
+                                     :style="(c.partnerName==p.partnerName && p.netBuyAmount.startsWith('-')) ? 'background: linear-gradient(to right, #abf0ab, #f1f1c2); border-radius: 1px; box-shadow: rgba(0.2, 0.2, 0.2, 0.2) 0px 3px 6px;'
+                                            : ((c.partnerName==p.partnerName && !p.netBuyAmount.startsWith('-')) ? 'background: linear-gradient(to right, #f2b8b8, #f1f1c2); border-radius: 1px; box-shadow: rgba(0.2, 0.2, 0.2, 0.2) 0px 3px 6px;' : '')">
+                                    <span class="left" style="width: 57px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.partnerName}}</span>
+                                    <span class="right" style="width: 45px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.netBuyAmount}}</span>
+                                    <span class="right" style="width: 42px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.totalNetBuyRatio}}</span>
+                                </div>
+
+                                <!-- <div class="td-flex" style="display: inline-table;">
+                                     <span class="right" style="font-size: 10px;display: inline-block;color: red; border: 0.2px solid #f00; border-radius: 1px;box-shadow: 0 3px 6px rgba(0,0,0,0.2);">
+                                         中山东路
+                                     </span>
+                                 </div>-->
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <table class="ve-table-content ve-table-border-x ve-table-border-y" id="vTable2">
+                <thead class="ve-table-fixed-header ve-table-header">
+                <tr class="ve-table-header-tr">
+                    <th class="ve-table-header-th" style="width: 158px;" v-for="key in sellIndex" :key="key" @click="showPartnerDetail(tableData[0][key+sellIndex-1].partnerCode)">
+                        <div class="td-flex" v-if="tableData[0][key+sellIndex-1] != null">
+                            <span class="center" style="width: 100%; font-size: 16px;">{{tableData[0][key+sellIndex-1].partnerName}}</span>
+                        </div>
+                        <div class="td-flex" v-if="tableData[0][key+sellIndex-1] != null">
+                            <span class="center" style="width: 100%; font-size: 12px; color: green;">{{tableData[0][key+sellIndex-1].netBuyAmount}}  {{tableData[0][key+sellIndex-1].totalNetBuyRatio}}</span>
+                        </div>
+                    </th>
+                </tr>
+                </thead>
+                <tbody class="ve-table-body ve-table-stripe ve-table-row-hover ve-table-row-highlight">
+                <tr>
+                    <td style="vertical-align: top;padding: 3px !important;" v-for="(col, index) in tableData" v-if="index > sellIndex">
+                        <ul style="width: 100%; margin-bottom: 4px; padding: 2px; border: 0.4px solid #fef6f5;"
+                            v-for="c in col" :class="'s'+c.code" @mouseenter="isHover('s'+c.code)" @mouseleave="isLeave('s'+c.code)">
+                            <!--                            :style="c.changeRate.startsWith('-') ? 'background: linear-gradient(#edf9f0, #fff);' : 'background: linear-gradient(#fef6f5, #fff);'"-->
+                            <li>
+                                <div class="td-flex" style="justify-content: left;" @click="showStockDetail(c.code)">
+                                    <span class="right" style="width: 50%; font-size: 16px;">{{c.name}}</span>
+                                    <span class="right" style="width: 40%;" :style="c.changeRate.startsWith('-') ? 'color: green' : 'color: red'">{{c.changeRate}}</span>
+                                </div>
+                                <div class="td-flex" style="font-size: 11px; " v-for="(p, index) in c.partners"
+                                     :style="(c.partnerName==p.partnerName && p.netBuyAmount.startsWith('-')) ? 'background: linear-gradient(to right, #abf0ab, #f1f1c2); border-radius: 1px; box-shadow: rgba(0.2, 0.2, 0.2, 0.2) 0px 3px 6px;'
+                                            : ((c.partnerName==p.partnerName && !p.netBuyAmount.startsWith('-')) ? 'background: linear-gradient(to right, #f2b8b8, #f1f1c2); border-radius: 1px; box-shadow: rgba(0.2, 0.2, 0.2, 0.2) 0px 3px 6px;' : '')">
+                                    <span class="left" style="width: 57px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.partnerName}}</span>
+                                    <span class="right" style="width: 45px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.netBuyAmount}}</span>
+                                    <span class="right" style="width: 42px;" :style="p.netBuyAmount.startsWith('-') ? 'color: green' : 'color: red'">{{p.totalNetBuyRatio}}</span>
+                                </div>
+
+                                <!-- <div class="td-flex" style="display: inline-table;">
+                                     <span class="right" style="font-size: 10px;display: inline-block;color: red; border: 0.2px solid #f00; border-radius: 1px;box-shadow: 0 3px 6px rgba(0,0,0,0.2);">
+                                         中山东路
+                                     </span>
+                                 </div>-->
                             </li>
                         </ul>
                     </td>
@@ -83,10 +144,19 @@
             fillData: function (response) {
                 let json = response.data;
                 this.tableData = json.data;
+                this.tableData[0].forEach((item, index) => {
+                    if (this.sellIndex === 0 && item.netBuyAmount.startsWith('-')) {
+                        this.sellIndex = index;
+                        console.log(`索引 ${index}: ${item}`);
+                    }
+                });
                 // console.log(JSON.stringify(this.tableData))
             },
             isHover: function (code) {
                 document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
+                    el.style.backgroundColor = 'yellow';
+                });
+                document.getElementById('vTable2').querySelectorAll('.' + code).forEach(function (el) {
                     el.style.backgroundColor = 'yellow';
                 });
             },
@@ -94,43 +164,33 @@
                 document.getElementById('vTable').querySelectorAll('.' + code).forEach(function (el) {
                     el.style.backgroundColor = ''; // 或者设置回默认颜色或其他颜色
                 });
+                document.getElementById('vTable2').querySelectorAll('.' + code).forEach(function (el) {
+                    el.style.backgroundColor = ''; // 或者设置回默认颜色或其他颜色
+                });
             },
             //弹出隐藏层
             getJsonValue: function (json) {
                 console.log(json)
             },
-            showFundDetail: function (code) {
-                if (fcode == "all") {
-                    MyDiv.style.left = '20%';
-                } else {
-                    MyDiv.style.left = '13%';
-                    MyDiv.style.top = '0';
-                }
+            showPartnerDetail: function (code) {
                 MyDiv.style.width = '1150px';
                 MyDiv.style.height = '680px';
                 MyDiv.style.display = 'block';
                 fade.style.display = 'block';
-                MyDiv.innerHTML = '<object type="text/html" data="fundDetail.html?' + code + '" width="100%" height="99%"></object>';
+                MyDiv.innerHTML = '<object type="text/html" data="dragonPartnerDetail.html?code=' + code + '" width="100%" height="99%"></object>';
             },
-            showReportStock: function (code) {
-                if (fcode == "all") {
-                    MyDiv.style.left = '20%';
-                } else {
-                    MyDiv.style.left = '13%';
-                    MyDiv.style.top = '0';
-                }
-                MyDiv.style.width = '1150px';
+            showStockDetail: function (code) {
+                MyDiv.style.width = '1500px';
                 MyDiv.style.height = '680px';
                 MyDiv.style.display = 'block';
                 fade.style.display = 'block';
-                MyDiv.innerHTML = '<object type="text/html" data="reportStock.html?' + code +
-                    '" width="100%" height="100%"></object>';
+                MyDiv.innerHTML = '<object type="text/html" data="dragonStockDetail.html?code=' + code + '" width="100%" height="100%"></object>';
 
             },
         },
         data: function () {
             return {
-                isDragging: true,
+                sellIndex: 0,
                 dates: [],
                 tableData: []
             };
